--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Flask==2.2.5
-flask-cors==3.0.10
-opencv-python==4.8.0.76
+gunicorn==21.2.0
+tensorflow==2.9.0
+keras==2.9.0
 numpy==1.23.5
+opencv-python==4.7.0.72
+pandas==1.5.3
+matplotlib==3.6.3
 deepface==0.0.79
-gunicorn==20.1.0
+requests==2.28.2
