--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ tensorflow==2.15.0
 keras==2.15.0
 numpy==1.23.5
 opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 pandas==1.5.3
 matplotlib==3.6.3
 deepface==0.0.79
